# DoubleJumper

./: CMakeLists.txt  DoubleJumper.cpp  DoubleJumper.h  MainMenuWidget.cpp  MainMenuWidget.h  OptionsWidget.cpp  OptionsWidget.h  PhysicsModel.cpp  PhysicsModel.h  RecordsWidget.cpp  RecordsWidget.h  main.cpp  mainwindow.cpp  mainwindow.h
game/: Game.cpp  Game.h  Record.cpp  Record.h  RecordDatabase.cpp  RecordDatabase.h  Screen.cpp  Screen.h  records.json
gameVisualisation/: AbstractPlatformWidget.cpp  AbstractPlatformWidget.h  GreenPlatformWidget.cpp  GreenPlatformWidget.h  LoseDialog.cpp  LoseDialog.h  ScoreBar.cpp  ScoreBar.h  Theme.cpp  Theme.h  gameWidget.cpp  gameWidget.h
items/: AbstractItem.cpp  AbstractItem.h  Jetpack.cpp  Jetpack.h  Spring.cpp  Spring.h  helicopterHat.cpp  helicopterHat.h
platfroms/: AbstractPlatform.cpp  AbstractPlatform.h  GreenPlatform.cpp  GreenPlatform.h
requirments/: Specification.txt  ufoPoint.json
